<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_repositoryGhProxy"
        android:title="@string/gh_proxy_repository" />
    <item android:title="@string/settings_omit">
        <menu>
            <item
                android:id="@+id/menu_editPlatformsConfig"
                android:title="@string/edit_platforms_config" />
            <item
                android:id="@+id/menu_editConvertersConfig"
                android:title="@string/edit_converters_config" />
            <item
                android:id="@+id/menu_directConvert"
                android:checkable="true"
                android:title="@string/directConvert" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_documents"
        android:title="@string/documents" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/about" />
</menu>